--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/logo_stgenetics.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/isotipe.jfif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>STgenetics</title>
   </head>
